# salary_bot

./: .envrc.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose-dev.yaml  pyproject.toml
salary_bot/: __main__.py  enums.py
salary_bot/bot/: bot.py  constants.py
salary_bot/config/: config.py  logging.py
salary_bot/database/: db.py
salary_bot/logic/: dto.py  services.py
